coppied task from piscine tested some od them

--- a/tests/lib_tests/Makefile
+++ b/tests/lib_tests/Makefile
@@ -12,7 +12,7 @@ OBJS = $(SRC:.c=.o)
 LIB = ../../libft/libft.a
 
 all: lib $(OBJS)
-	$(CC) $(OBJS) $(LIB) $(CFLAGS)  -o $(NAME)
+	$(CC) $(OBJS) $(LIB) $(CFLAGS)  -o $(NAME) -lbsd
 
 test:
 	$(CC) -c $(SRC)
