--- a/libft/Makefile
+++ b/libft/Makefile
@@ -9,7 +9,12 @@ SRC = ft_isalpha.c\
       ft_memset.c\
 	  ft_bzero.c\
 	  ft_memcpy.c\
-	  ft_memmove.c
+	  ft_memmove.c\
+	  ft_strlcpy.c\
+	  ft_strlcat.c\
+	  ft_tolower.c\
+	  ft_toupper.c\
+	  ft_atoi.c
 CC = gcc
 
 OBJ = $(SRC:.c=.o)
