--- a/libft/Makefile
+++ b/libft/Makefile
@@ -14,7 +14,15 @@ SRC = ft_isalpha.c\
 	  ft_strlcat.c\
 	  ft_tolower.c\
 	  ft_toupper.c\
-	  ft_atoi.c
+	  ft_atoi.c\
+	  ft_strdup.c\
+	  ft_strncmp.c\
+	  ft_strchr.c\
+	  ft_strrchr.c\
+	  ft_memchr.c\
+	  ft_memcmp.c\
+	  ft_strnstr.c\
+	  ft_calloc.c
 CC = gcc
 
 OBJ = $(SRC:.c=.o)
