half of 2nd part tb fixed

--- a/libft/Makefile
+++ b/libft/Makefile
@@ -22,7 +22,12 @@ SRC = ft_isalpha.c\
 	  ft_memchr.c\
 	  ft_memcmp.c\
 	  ft_strnstr.c\
-	  ft_calloc.c
+	  ft_calloc.c\
+	  ft_substr.c\
+	  ft_strjoin.c\
+	  ft_strtrim.c\
+	  ft_itoa.c\
+	  ft_split.c
 CC = gcc
 
 OBJ = $(SRC:.c=.o)
