part 1 tbd 2 part

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "files.associations": {
         "stddef.h": "c",
-        "libft.h": "c"
+        "libft.h": "c",
+        "ctype.h": "c",
+        "stdio.h": "c"
     }
 }
