--- a/libft/Makefile
+++ b/libft/Makefile
@@ -26,7 +26,9 @@ SRC = ft_isalpha.c\
 	  ft_substr.c\
 	  ft_strjoin.c\
 	  ft_strtrim.c\
-	  ft_itoa.c
+	  ft_itoa.c\
+	  ft_strmapi.c\
+	  ft_split.c
 
 CC = gcc
 
