--- a/libft/Makefile
+++ b/libft/Makefile
@@ -28,8 +28,14 @@ SRC = ft_isalpha.c\
 	  ft_strtrim.c\
 	  ft_itoa.c\
 	  ft_strmapi.c\
-	  ft_split.c
-
+	  ft_split.c\
+	  ft_striteri.c\
+	  ft_putchar_fd.c\
+	  ft_putstr_fd.c\
+	  ft_putendl_fd.c\
+	  ft_putnbr_fd.c
+	  
+SRC_ADD = ft_lstnew.c
 CC = gcc
 
 OBJ = $(SRC:.c=.o)
