--- a/libft/Makefile
+++ b/libft/Makefile
@@ -34,41 +34,43 @@ SRC = ft_isalpha.c\
 	  ft_putstr_fd.c\
 	  ft_putendl_fd.c\
 	  ft_putnbr_fd.c
-	  
-SRC_BONUS = ft_lstnew.c\
+
+SRCBONUS = ft_lstnew.c\
 			ft_lstadd_front.c\
 			ft_lstsize.c\
 			ft_lstlast.c\
 			ft_lstadd_back.c\
-			ft_lstdelone.c
+			ft_lstdelone.c\
+			ft_lstclear.c\
+			ft_lstiter.c\
+			ft_lstmap.c
 CC = gcc
 
 OBJ = $(SRC:.c=.o)
-OBJ_BONUS = $(SRC_BONUS:.c=.o)
+OBJ_BONUS = $(SRCBONUS:.c=.o)
 
 NAME = libft.a
 
 CFLAGS += -Wall -Werror -Wextra
 
- 
 all: fclean $(NAME) bonus
 
 $(NAME): $(OBJ)
-	ar rc $(NAME) $(OBJ) 
+	ar rc $(NAME) $(OBJ)
 
 bonus: $(OBJ_BONUS) $(OBJ)
-	ar rc $(NAME) $(OBJ) $(OBJ_BONUS) 
+	ar rc $(NAME) $(OBJ) $(OBJ_BONUS)
 
 $(OBJ_BONUS) :
-	$(CC) $(CFLAGS) -c $(SRC_BONUS)	
+	$(CC) $(CFLAGS) -c $(SRCBONUS)
 
 $(OBJ) :
-	$(CC) $(CFLAGS) -c $(SRC) 
-	
+	$(CC) $(CFLAGS) -c $(SRC)
+
 
 
 clean:
-	rm -f $(OBJ) $(OBJ_BONUS) 
+	rm -f $(OBJ) $(OBJ_BONUS)
 
 fclean: clean
 	rm -f $(NAME)
