--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,12 @@
 {
     "files.associations": {
-        "stddef.h": "c",
-        "libft.h": "c",
-        "ctype.h": "c",
-        "stdio.h": "c"
-    },
+		"stddef.h": "c",
+		"libft.h": "c",
+		"ctype.h": "c",
+		"stdio.h": "c",
+		"get_next_line.h": "c",
+		"tests.h": "c"
+	},
     "editor.tabSize": 4,
 	"editor.insertSpaces": false,
 	"editor.detectIndentation": false,
