--- a/libft/Makefile
+++ b/libft/Makefile
@@ -35,15 +35,15 @@ SRC = ft_isalpha.c\
 	  ft_putendl_fd.c\
 	  ft_putnbr_fd.c
 
-SRCBONUS = ft_lstnew.c\
-			ft_lstadd_front.c\
-			ft_lstsize.c\
-			ft_lstlast.c\
-			ft_lstadd_back.c\
-			ft_lstdelone.c\
-			ft_lstclear.c\
-			ft_lstiter.c\
-			ft_lstmap.c
+SRCBONUS = ft_lstnew_bonus.c\
+			ft_lstadd_front_bonus.c\
+			ft_lstsize_bonus.c\
+			ft_lstlast_bonus.c\
+			ft_lstadd_back_bonus.c\
+			ft_lstdelone_bonus.c\
+			ft_lstclear_bonus.c\
+			ft_lstiter_bonus.c\
+			ft_lstmap_bonus.c
 CC = gcc
 
 OBJ = $(SRC:.c=.o)
@@ -52,6 +52,9 @@ OBJ_BONUS = $(SRCBONUS:.c=.o)
 NAME = libft.a
 
 CFLAGS += -Wall -Werror -Wextra
+
+breaker:
+			$(CC) -nostartfiles -shared -fPIC -ldl $(CFLAGS) -o libft.so $(SRC) $(SRCBONUS)
 
 all: fclean $(NAME) bonus
 
