--- a/get_next_line/Makefile
+++ b/get_next_line/Makefile
@@ -1,6 +1,7 @@
 CC = gcc
 
-FLAGS = -Wall -Wextra -Werror -D BUFFER_SIZE=1
+FLAGS = -g
+# -Wall -Wextra -Werror -D BUFFER_SIZE=24
 
 SRC =   get_next_line.c\
 		get_next_line_utils.c\
